# segmentation-to-pointcloud

./: .gitignore  CMakeLists.txt  README.md  index.html  obj3Drec.xml  seg2cloud.xml
app/scripts/: obj3Drec_APP.xml.template  obj3Drec_APPSIM.xml.template  seg2cloud_APP.xml.template  seg2cloud_APPSIM.xml.template
doxygen/: doc-compile.ps1  doc-compile.sh  generate.txt
doxygen/doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  group__seg2cloud.html  index.html  main_8cpp_source.html  modules.html
doxygen/doc/html/search/: all_0.js
doxygen/doc/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  group__seg2cloud.tex  modules.tex  refman.tex
doxygen/generated-from-xml/: seg2cloud.xml.dox
src/: main.cpp
